--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.2.79",
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^7.0.1",
+    "@react-navigation/elements": "^2.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
+    "@types/react": "~18.3.12",
+    "expo": "~52.0.36",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0"
   },
   "private": true
 }
